# brunel-hack

./: .gitmodules  LICENSE  README.md
dance-mat-firmware/: CMakeLists.txt  README.md  format.sh  sdkconfig  sdkconfig.old
dance-mat-firmware/main/: CMakeLists.txt  ansi_colour.h  hardware.h  idf_component.yml  idf_components.yml  logger.c  logger.h  main.c  mongoose.c  mongoose.h  net.c  net.h  status.c  status.cpp  status.h  touch.c  touch.h  wifi.c  wifi.h
dance-mat-firmware/prototype-server/: index.js  package-lock.json  package.json
dance-mat-firmware/prototype-server/public/: index.html
frontend/: Cargo.toml  index.html  package.json  pnpm-lock.yaml  prettier.config.cjs  tailwind.config.cjs  tailwind.config.js  tailwind.css  tsconfig.json
frontend/src/: App.svelte  app.css  main.rs
frontend/src/assets/: heart.svelte
frontend/src/assets/logo/: index.svelte
frontend/src/components/: game.svelte  gameOver.svelte  progress.svelte
frontend/src/utils/: index.ts
highscore/: .gitignore  .yarnrc.yml  package.json  tsconfig.json
highscore/src/: Photographer.ts  Score.ts  Spreadsheet.ts  index.ts  sleep.ts  win-control.d.ts  winner.ts
